removing gatsby code, slight style changes

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -159,7 +159,7 @@ body {
   min-height: 100vh;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
-  background: linear-gradient(to bottom, var(--cream-stone) 50%, color-mix(in srgb, var(--cream-stone) 90%, black) 50%);
+  background: var(--cream-stone);
   color: var(--mud-brown-700);
 }
 
@@ -197,7 +197,7 @@ select {
 
 html,
 body {
-  height: fit-content;
+  height: 100%;
 }
 
 iframe {
