--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,7 +13,7 @@ import Socials from './Socials.astro';
     padding-top: var(--space-s);
     min-height: var(--footer-height);
     width: 100vw;
-    background-color: transparent;
+    background-color: rgba(0, 0, 0, 0.1);
   }
 
   .grid-container {
