--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import HighlightSection from '../components/HighlightSection.astro';
         <p class="description">
           takes notes on web-development, fatherhood, and digital minimalism
         </p>
-        <p class="currently">Currently a founding engineer at <a href="https://hyperparam.app"><strong>Hyperparam</strong></a></p>
+        <p class="currently">Founding engineer at <a href="https://hyperparam.app"><strong>Hyperparam</strong></a></p>
       </div>
     </div>
     <div class="garden-header">
